--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div id="app">
             <div class="nav-bar"></div>
-            <product></product>
+            <product :premium = "premium"></product>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script src = "main.js"></script>
